# MPI_tasks

./: CMakeLists.txt  README.md
Lab1/: Lab1  Lab1.c  Lab1_graph.py  Lab1_graph_cluster.py  results.txt  results_cluster.txt  results_new.txt
Lab2/: Lab2.c
